--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,5 @@ body {
   background-color: #f9f3f3;
   width: 60%;
   border-radius: 5px;
-  /* box-shadow: ; */
+  box-shadow: 15px 14px 20px rgb(0 0 0 / 0.4);
 }
