--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,5 @@
 @import-normalize;
 
-// body {
-//   // margin: 0;
-//   box-sizing: border-box;
-// }
-
 .App {
   background: linear-gradient(to right, #f09819, #ff512f);
   height: 100vh;
@@ -55,4 +50,23 @@
 
 .Footer {
   background-color: #edeef7;
+}
+
+.item-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms, transform 500ms;
+  transform: translateX(0%);
+}
+.item-exit {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms, transform 500ms;
+  transform: translateX(100%);
 }
