--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import-normalize;
 
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -23,6 +27,41 @@ body {
 
 .Header {
   background-color: #edeef7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__date {
+    letter-spacing: 2px;
+  }
+}
+
+.Badge {
+  position: relative;
+
+  .Badge__content {
+    position: absolute;
+    top: -12%;
+    left: 95%;
+    background-color: #f92323;
+    color: white;
+    width: 20px;
+    height: 20px;
+    font-size: calc(1rem * 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+}
+
+.Header__text {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 24px;
+  font-weight: 800;
+  color: #fa6b27;
+  margin: 10px;
 }
 
 .AddTodo {
