--- a/src/index.scss
+++ b/src/index.scss
@@ -99,9 +99,24 @@ body {
   }
 }
 
-.spaceman {
-  border-radius: 50%;
-  width: 350px;
+.Picture {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__spaceman {
+    border-radius: 50%;
+    width: 200px;
+    box-shadow: 9px 6px 10px 0px rgba(#a6a9b6, 0.6);
+  }
+
+  &__text {
+    margin-top: 30px;
+    margin-bottom: 0;
+    letter-spacing: 2px;
+    font-weight: 500;
+    color: #fa6b27;
+  }
 }
 
 .TodoList {
