--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -1,3 +1,5 @@
+@import "../../sassStyles/_variables.scss";
+
 .Badge {
   position: relative;
 
@@ -5,7 +7,7 @@
     position: absolute;
     top: -12%;
     left: 95%;
-    background-color: #f92323;
+    background-color: $badge-color;
     color: white;
     width: 20px;
     height: 20px;
@@ -13,6 +15,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
+    border-radius: $round-shape;
   }
 }
