--- a/src/components/TodoItem/TodoItem.scss
+++ b/src/components/TodoItem/TodoItem.scss
@@ -1,11 +1,15 @@
+@import "../../sassStyles/_variables.scss";
+@import "../../sassStyles/_mixins.scss";
+@import "../../sassStyles/_animations.scss";
+
 .TodoItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #96c5fd;
+  background-color: $main-color;
   margin-bottom: 10px;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: $rounded-shape;
 
   &:last-child {
     margin-bottom: 0;
@@ -22,166 +26,22 @@
   &__text {
     flex-grow: 1;
     margin-right: 10px;
-    letter-spacing: 2px;
+    letter-spacing: $normal-letter-spacing;
     overflow: auto;
 
-    &::-webkit-scrollbar {
-      background-color: #edeef7;
-      border-radius: 5px;
-      height: 8px;
-
-      &-thumb {
-        border-radius: 5px;
-        background-image: linear-gradient(to right, #f09819, #ff512f);
-      }
-    }
+    @include scrollbarX($bg-color, $scrollX-gradient-color);
   }
 
   &__btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f92323;
-    border-radius: 50%;
+    background-color: $remove-btn-color;
+    border-radius: $round-shape;
     outline: none;
     border: none;
     width: 25px;
     height: 25px;
     cursor: pointer;
-  }
-}
-
-.item {
-  &-appear {
-    opacity: 0;
-    transform: translateX(-100%);
-
-    &-active {
-      opacity: 1;
-      transition: opacity 500ms, transform 500ms;
-      transform: translateX(0%);
-    }
-  }
-
-  &-enter {
-    opacity: 0;
-    transform: translateX(-100%);
-
-    &-active {
-      opacity: 1;
-      transition: opacity 500ms, transform 500ms;
-      transform: translateX(0%);
-    }
-  }
-
-  &-active {
-    opacity: 1;
-    transition: opacity 500ms, transform 500ms;
-    transform: translateX(0%);
-  }
-
-  &-exit {
-    opacity: 1;
-    transform: translateX(0%);
-
-    &-active {
-      opacity: 0;
-      transition: opacity 500ms, transform 500ms;
-      transform: translateX(100%);
-    }
-  }
-}
-
-.checkbox {
-  --background: #fff;
-  --border: #d1d6ee;
-  --border-hover: #bbc1e1;
-  --border-active: #1e2235;
-  --tick: #fff;
-  margin-right: 10px;
-  position: relative;
-  input,
-  svg {
-    width: 21px;
-    height: 21px;
-    display: block;
-  }
-  input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    position: relative;
-    outline: none;
-    background: var(--background);
-    border: none;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: box-shadow 0.3s;
-    box-shadow: inset 0 0 0 var(--s, 1px) var(--b, var(--border));
-    &:hover {
-      --s: 2px;
-      --b: var(--border-hover);
-    }
-    &:checked {
-      --b: var(--border-active);
-    }
-  }
-  svg {
-    pointer-events: none;
-    fill: none;
-    stroke-width: 2px;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke: var(--stroke, var(--border-active));
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 21px;
-    height: 21px;
-    transform: scale(var(--scale, 1)) translateZ(0);
-  }
-  &.path {
-    input {
-      &:checked {
-        --s: 2px;
-        transition-delay: 0.4s;
-        & + svg {
-          --a: 16.1 86.12;
-          --o: 102.22;
-        }
-      }
-    }
-    svg {
-      stroke-dasharray: var(--a, 86.12);
-      stroke-dashoffset: var(--o, 86.12);
-      transition: stroke-dasharray 0.6s, stroke-dashoffset 0.6s;
-    }
-  }
-  &.bounce {
-    --stroke: var(--tick);
-    input {
-      &:checked {
-        --s: 11px;
-        & + svg {
-          animation: bounce 0.4s linear forwards 0.2s;
-        }
-      }
-    }
-    svg {
-      --scale: 0;
-    }
-  }
-}
-
-@keyframes bounce {
-  50% {
-    transform: scale(1.2);
-  }
-  75% {
-    transform: scale(0.9);
-  }
-  100% {
-    transform: scale(1);
   }
 }
