--- a/src/components/TodoList/TodoList.scss
+++ b/src/components/TodoList/TodoList.scss
@@ -1,3 +1,6 @@
+@import "../../sassStyles/_variables.scss";
+@import "../../sassStyles/_mixins.scss";
+
 .TodoList {
   margin: 0 30px;
   padding: 0 5px;
@@ -5,18 +8,9 @@
   overflow-x: hidden;
   overflow-y: auto;
 
-  &::-webkit-scrollbar {
-    background-color: #edeef7;
-    border-radius: 5px;
-    width: 8px;
+  @include scrollbarY($bg-color, $scrollY-gradient-color);
 
-    &-thumb {
-      border-radius: 5px;
-      background-image: linear-gradient(to bottom, #f09819, #ff512f);
-    }
-  }
-
-  @media all and (max-width: 375px) {
+  @media all and (max-width: $mobile-m-width) {
     max-height: none;
     flex: 1;
   }
