--- a/src/components/TodoItem/TodoItem.scss
+++ b/src/components/TodoItem/TodoItem.scss
@@ -1,6 +1,6 @@
-@import "../../sassStyles/_variables.scss";
-@import "../../sassStyles/_mixins.scss";
-@import "../../sassStyles/_animations.scss";
+@import "../../styles/variables";
+@import "../../styles/mixins";
+@import "../../styles/animations";
 
 .TodoItem {
   display: flex;
