--- a/src/components/TodoList/TodoList.scss
+++ b/src/components/TodoList/TodoList.scss
@@ -1,5 +1,5 @@
-@import "../../sassStyles/_variables.scss";
-@import "../../sassStyles/_mixins.scss";
+@import "../../styles/variables";
+@import "../../styles/mixins";
 
 .TodoList {
   margin: 0 30px;
