change background color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $scrollY-gradient-color: linear-gradient(to bottom, #f09819, #ff512f);
 $scrollX-gradient-color: linear-gradient(to right, #f09819, #ff512f);
 
 $main-color: #96c5fd;
-$main-bg-color: #f9f3f3;
+$main-bg-color: #ffffff;
 $bg-color: #edeef7;
 $badge-color: #f92323;
 $remove-btn-color: #f92323;
